--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 <body>
     <header>
-        <img class="profile" src="images/me.png" alt="Logo">
+        <img class="profile" src="images/me.jpg" alt="Logo">
         <h1>Bessley Tawanda Katsande</h1>
     </header>
     <nav>
