--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
  h1 {
         text-align: center;
-        background-color: lightgrey;
+        background-color: #e1873d;
         font-family: 'Garamond', 'Lucida Bright', sans-serif;
+        padding: 60px;
     }
 
  h2 {
@@ -20,7 +21,7 @@
     }
 
  h3 {
-        background-color: lightgrey;
+        background-color: #e1873d;
         font-family: 'Garamond', 'Lucida Bright', sans-serif;
     }
 
@@ -34,16 +35,17 @@
         border-style: solid;
         padding: 40px;
         font-family: 'Roboto', Helvetica, sans-serif;
-        background-color: black;
+        background-color: #5c3755;
         color: white;
    }
+ 
 
-
- .profile img {
+ .profile {
         display: block;
         float: left;
-        width: 100%;
+        width: 200px;
         height: auto;
+        object-fit: scale-down;
    }
 
    nav{
@@ -52,25 +54,31 @@
        border-style: solid;
        padding: 40px;
        font-family: 'Roboto', Helvetica, sans-serif;
-       background-color: black;
+       background-color: #5c3755;
        color: white;
    }
 
  footer {
         text-align: center;
         list-style-type: none;
-        background-color: lightgrey;
+        background-color: #5c3755;
         font-family: 'Roboto', Helvetica, sans-serif;
     }
 </style>
 
 <head>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="stylesheet" href="styles/normalize.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="This website belongs to Bessley Tawanda Katsande to complete assignments for the class WDD 230 - Web Frontend Development">
     <meta name="author" content="Bessley Tawanda Katsande">
     <title>Bessley Tawanda Katsande - WDD 230 - Web Frontend Development</title>
+    <meta property="og:title" content="Bessley Tawanda Katsande">
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="https://www.dreamstime.com/street-scene-businesses-vehicles-people-goodwood-goodwood-south-africa-august-street-scene-businesses-vehicles-image129710315">
+    <meta property="og:url" content="https://bessleytkatsande.github.io/wdd230/">
 </head>
 
 <body>
