--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
         content="This website belongs to Bessley Tawanda Katsande to complete assignments for the class WDD 230 - Web Frontend Development">
     <meta name="author" content="Bessley Tawanda Katsande">
     <title>Bessley Tawanda Katsande - WDD 230 - Web Frontend Development</title>
-    <meta property="og:title" content="Bessley Tawanda Katsande">
+    <meta property="og:title" content="Home Page">
     <meta property="og:type" content="website"/>
-    <meta property="og:image" content="https://www.dreamstime.com/street-scene-businesses-vehicles-people-goodwood-goodwood-south-africa-august-street-scene-businesses-vehicles-image129710315">
+    <meta property="og:image" content="https://thumbs.dreamstime.com/z/street-scene-businesses-vehicles-people-goodwood-goodwood-south-africa-august-street-scene-businesses-vehicles-129710315.jpg?w=992">
     <meta property="og:url" content="https://bessleytkatsande.github.io/wdd230/">
 </head>
 
