--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <meta property="og:title" content="Home Page">
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="https://thumbs.dreamstime.com/z/street-scene-businesses-vehicles-people-goodwood-goodwood-south-africa-august-street-scene-businesses-vehicles-129710315.jpg?w=992">
-    <meta property="og:url" content="https://bessleytkatsande.github.io/wdd230/">
+    <meta property="og:url" content="https://bessleytkatsande.github.io/wdd230/index.html">
 </head>
 
 <body>
