--- a/index.html
+++ b/index.html
@@ -1,74 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
-<style>
-  #content {
-        max-width: 1600px;
-        margin: 0 auto;
-    }
-
- h1 {
-        text-align: center;
-        background-color: #e1873d;
-        font-family: 'Garamond', 'Lucida Bright', sans-serif;
-        padding: 60px;
-    }
-
- h2 {
-        text-align: center;
-        text-decoration-line: underline;
-        font-family: 'Garamond', 'Lucida Bright', sans-serif;
-    }
-
- h3 {
-        background-color: #e1873d;
-        font-family: 'Garamond', 'Lucida Bright', sans-serif;
-    }
-
- main section {
-        text-align: center;
-    }
-
- ul.a {
-        text-align: left;
-        list-style-type: none;
-        border-style: solid;
-        padding: 40px;
-        font-family: 'Roboto', Helvetica, sans-serif;
-        background-color: #5c3755;
-        color: white;
-   }
- 
-
- .profile {
-        display: block;
-        float: left;
-        width: 200px;
-        height: auto;
-        object-fit: scale-down;
-   }
-
-   nav{
-       text-align: center;
-       list-style-type: none;
-       border-style: solid;
-       padding: 40px;
-       font-family: 'Roboto', Helvetica, sans-serif;
-       background-color: #5c3755;
-       color: white;
-   }
-
- footer {
-        text-align: center;
-        list-style-type: none;
-        background-color: #5c3755;
-        font-family: 'Roboto', Helvetica, sans-serif;
-    }
-</style>
-
 <head>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
