--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
     </main>
     <footer>
         <li><p>&copy; <span id="copyrightYear"></span>Bessley Tawanda Katsande, Cape Town South Africa</p></li>
-        <li><p>alert(document.lastModified)</p></li>
+        <let text = document.lastModified>
     </footer>
-    <a href="getdates.js"</a>
 </body>
 
 </html>
