--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h3>Learning Activities</h3>
             <ul class="a">
                     <li><a>Lesson 01: Home Page</a></li>
-                    <li><a>Lesson 02: Design Principles Document</a></li>
+                    <li><a href="https://bessleytkatsande.github.io/wdd230/lesson02/design-principles.html">Lesson 02: Design Principles Document</a></li>
                     <li><a>Lesson 03: Chamber Site Plan</a></li>
                     <li><a>Lesson 04: Chamber Home</a></li>
                     <li><a>Lesson 05: Book of Mormon App</a></li>
