--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <section attribute="card">
             <h3>Learning Activities</h3>
             <ul class="a">
+                    <li><a href="https://bessleytkatsande.github.io/wdd230/week%201/styles/holygrail.html">Lesson 01: Holy Grail</a></li>
                     <li><a href="https://bessleytkatsande.github.io/wdd230/lesson02/design-principles.html">Lesson 02: Design Principles Document</a></li>
                     <li><a>Lesson 03: Chamber Site Plan</a></li>
                     <li><a>Lesson 04: Chamber Home</a></li>
@@ -51,6 +52,9 @@
             <h3>Information</h3>
         </section>
     </main>
+    <iframe>
+        <a href="/images/map.png"></a> 
+    </iframe>
     <footer>
         <li><p>&copy; <span id="copyrightYear"></span>Bessley Tawanda Katsande, Cape Town South Africa</p></li>
         <let text = document.lastModified>
