--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ The CSS class rules will handle the different views, layouts, and displays.
             </ul>
         </nav>
     </label>
-
+    <br>
     <main>
         <h2>WDD 230: Web Frontend Development</h2>
         <section attribute="card">
@@ -61,7 +61,7 @@ The CSS class rules will handle the different views, layouts, and displays.
             <ul class="a">
                     <li><a href="https://bessleytkatsande.github.io/wdd230/week%201/styles/holygrail.html">Lesson 01: Holy Grail</a></li>
                     <li><a href="https://bessleytkatsande.github.io/wdd230/lesson02/design-principles.html">Lesson 02: Design Principles Document</a></li>
-                    <li><a href="https://bessleytkatsande.github.io/wdd230/images/csscomb.png">Lesson 03: Chamber Site Plan</a></li>
+                    <li><a>Lesson 03: Chamber Site Plan</a></li>
                     <li><a>Lesson 04: Chamber Home</a></li>
                     <li><a>Lesson 05: Book of Mormon App</a></li>
                     <li><a>Lesson 06: Course Home Enhancement</a></li>
@@ -71,12 +71,14 @@ The CSS class rules will handle the different views, layouts, and displays.
                     <li><a>Lesson 10: Weather API</a></li>
             </ul>
         </section>
+        <br>
         <section class="card">
             <h3>Information</h3>
         </section>
     </main>
+    <br>
     <iframe>
-        <img src="images/map.png" alt="Geo"></a> 
+        <img class="location" src="images/map.png" alt="Geo"></a> 
     </iframe>
     <footer>
         <li><p>&copy; <span id="copyrightYear"></span>Bessley Tawanda Katsande, Cape Town South Africa</p></li>
