--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ The CSS class rules will handle the different views, layouts, and displays.
             <ul class="a">
                     <li><a href="https://bessleytkatsande.github.io/wdd230/week%201/styles/holygrail.html">Lesson 01: Holy Grail</a></li>
                     <li><a href="https://bessleytkatsande.github.io/wdd230/lesson02/design-principles.html">Lesson 02: Design Principles Document</a></li>
-                    <li><a>Lesson 03: Chamber Site Plan</a></li>
+                    <li><a href="https://bessleytkatsande.github.io/wdd230/lesson03/chamber-site-plan.html">Lesson 03: Chamber Site Plan</a></li>
                     <li><a>Lesson 04: Chamber Home</a></li>
                     <li><a>Lesson 05: Book of Mormon App</a></li>
                     <li><a>Lesson 06: Course Home Enhancement</a></li>
@@ -78,7 +78,7 @@ The CSS class rules will handle the different views, layouts, and displays.
     </main>
     <br>
     <iframe>
-        <img class="location" src="images/map.png" alt="Geo"></a> 
+        <img class="location" src="images/map.png" alt="Geo">
     </iframe>
     <footer>
         <li><p>&copy; <span id="copyrightYear"></span>Bessley Tawanda Katsande, Cape Town South Africa</p></li>
